<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorSaveDialogBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <com.one.two.three.poster.front.components.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/which_size"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgBigFrame"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_frame" />

            <com.one.two.three.poster.front.components.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/big"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.one.two.three.poster.front.components.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/big_desc"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="9sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgNormalFrame"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="12dp"
                app:srcCompat="@drawable/ic_frame" />

            <com.one.two.three.poster.front.components.CustomTextView
                android:id="@+id/customTextView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/normal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.one.two.three.poster.front.components.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/normal_desc"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="9sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sectionRate"
        android:orientation="vertical"
        android:background="@drawable/update_features_background"
        android:padding="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.one.two.three.poster.front.components.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:text="@string/rate_poster"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.one.two.three.poster.front.components.RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.one.two.three.poster.front.components.CustomTextView
            android:id="@+id/txtSavePoster"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/save"
            android:textColor="@color/colorHomePink"
            android:textSize="15sp" />

        <com.one.two.three.poster.front.components.CustomTextView
            android:id="@+id/txtCancelSave"
            android:background="?android:attr/selectableItemBackground"
            android:padding="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>
