<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.one.two.three.poster.front.components.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorHomePink"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/update"
        android:textColor="#FFF"
        android:textSize="18sp" />

    <LinearLayout
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSaveDialogBackground"
        android:orientation="vertical">

        <com.one.two.three.poster.front.components.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_update_available"
            android:textColor="@color/colorPrimary" />

        <com.one.two.three.poster.front.components.CustomTextView
            android:id="@+id/txtUpdateCurrentVersion"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_version"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <com.one.two.three.poster.front.components.CustomTextView
            android:id="@+id/txtUpdateNewVersion"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_version"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="96dp"
            android:layout_height="96dp">

            <com.one.two.three.poster.front.components.CustomTextView
                android:id="@+id/txtUpdateDownload"
                android:padding="8dp"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@drawable/direct_download_circle"
                android:gravity="center"
                android:lineSpacingMultiplier="1.25"
                android:text="@string/direct_download"
                android:textColor="#FFF"
                android:textSize="14sp" />

            <com.github.lzyzsd.circleprogress.DonutProgress
                android:visibility="invisible"
                app:donut_unfinished_color="@color/colorHomePink"
                app:donut_unfinished_stroke_width="2dp"
                app:donut_finished_color="@color/colorHomePink"
                app:donut_finished_stroke_width="6dp"
                app:donut_text_size="15sp"
                app:donut_text_color="@color/colorPrimaryDark"
                android:id="@+id/downloadProgress"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/update_features_background"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:paddingBottom="12dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="12dp">

            <com.one.two.three.poster.front.components.CustomTextView
                android:textStyle="bold"
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/new_features"
                android:textColor="@color/colorPrimary" />

            <ScrollView
                android:id="@+id/updateScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.one.two.three.poster.front.components.CustomTextView
                    android:paddingRight="4dp"
                    android:textSize="12sp"
                    android:lineSpacingMultiplier="1.2"
                    android:id="@+id/txtUpdateFeatures"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.one.two.three.poster.front.components.CustomTextView
                android:id="@+id/txtUpdateOk"
                android:layout_marginLeft="8dp"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="@color/colorHomePink"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>