<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:activity="com.one.two.three.poster.front.activities.ActivityCategories"
    tools:showIn="@layout/activity_categories">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.one.two.three.poster.front.components.CustomTextView
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:textStyle="bold"
                android:textSize="23sp"
                android:textColor="#FFF"
                android:text="کلید واژه ها"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <com.one.two.three.poster.front.components.CustomTextView
                    android:text="@string/sargarmi"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:tag="1"
                    android:onClick="tagSelect"
                    android:background="@drawable/tag"
                    android:layout_weight="0.3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <com.one.two.three.poster.front.components.CustomTextView
                    android:text="@string/seminar"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:background="@drawable/tag"
                    android:tag="2"
                    android:onClick="tagSelect"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <com.one.two.three.poster.front.components.CustomTextView
                    android:text="@string/gardeshgari"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:tag="3"
                    android:onClick="tagSelect"
                    android:textColor="#FFF"
                    android:background="@drawable/tag"
                    android:layout_weight="0.32"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <com.one.two.three.poster.front.components.CustomTextView
                    android:text="@string/kasbokar"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:tag="4"
                    android:onClick="tagSelect"
                    android:textColor="#FFF"
                    android:background="@drawable/tag"
                    android:layout_weight="0.3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <com.one.two.three.poster.front.components.CustomTextView
                    android:id="@+id/customTextView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/tag"
                    android:gravity="center_vertical|right"
                    android:onClick="tagSelect"
                    android:paddingRight="10dp"
                    android:tag="5"
                    android:text="@string/maliosarmaye"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <com.one.two.three.poster.front.components.CustomTextView
                    android:text="@string/modiriat"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:tag="6"
                    android:onClick="tagSelect"
                    android:textColor="#FFF"
                    android:background="@drawable/tag"
                    android:layout_weight="0.32"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <com.one.two.three.poster.front.components.CustomTextView
                    android:text="@string/maliobime"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:tag="7"
                    android:onClick="tagSelect"
                    android:background="@drawable/tag"
                    android:layout_weight="0.3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <com.one.two.three.poster.front.components.CustomTextView
                    android:text="@string/elmi"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:tag="8"
                    android:onClick="tagSelect"
                    android:background="@drawable/tag"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <com.one.two.three.poster.front.components.CustomTextView
                    android:text="@string/technology"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:tag="9"
                    android:onClick="tagSelect"
                    android:background="@drawable/tag"
                    android:layout_weight="0.32"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <com.one.two.three.poster.front.components.CustomTextView
                    android:text="@string/karafarini"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:tag="10"
                    android:onClick="tagSelect"
                    android:background="@drawable/tag"
                    android:layout_weight="0.3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <com.one.two.three.poster.front.components.CustomTextView
                    android:text="@string/mazhab"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:tag="11"
                    android:onClick="tagSelect"
                    android:background="@drawable/tag"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <com.one.two.three.poster.front.components.CustomTextView
                    android:text="@string/tahsili"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:tag="12"
                    android:onClick="tagSelect"
                    android:textColor="#FFF"
                    android:background="@drawable/tag"
                    android:layout_weight="0.32"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <com.one.two.three.poster.front.components.CustomTextView
                    android:text="دیگر موارد..."
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:background="@drawable/tag"
                    android:layout_weight="0.3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <com.one.two.three.poster.front.components.CustomTextView
                    android:id="@+id/customTextView"
                    android:layout_width="0dp"
                    android:textSize="13sp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:tag="13"
                    android:onClick="tagSelect"
                    android:layout_weight="0.5"
                    android:background="@drawable/tag"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:text="@string/tosee"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <com.one.two.three.poster.front.components.CustomTextView
                    android:text="@string/pezeshki"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:tag="14"
                    android:onClick="tagSelect"
                    android:textColor="#FFF"
                    android:background="@drawable/tag"
                    android:layout_weight="0.32"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
